fix: align alert

--- a/src/app/core/components/dialog/dialog.component.scss
+++ b/src/app/core/components/dialog/dialog.component.scss
@@ -6,6 +6,7 @@
  */
 
 #core-dialog{
+  margin-bottom: 24px;
   mat-dialog-content{
     max-width: 30vw;
     @media screen and (max-width: 600px){
